# MCP_CrocoDash

./: crocodash_mcp_scope.md  pyproject.toml  resources.py  run_server.sh  server.py
tools/: _bg_worker.py  case.py  discovery.py  grid.py  shareable.py  status.py
